--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -28,6 +28,10 @@ a:hover {
 	margin-right: 2px;
 	border-right: 3px rgb(128, 128, 128);
 }
+.logo {
+	height: 3rem;
+	transform: translateY(-25%);
+}
 .cart-icon-container {
 	display: flex;
 	justify-content: center;
@@ -45,6 +49,8 @@ a:hover {
 	background-color: rgb(71, 158, 246);
 	border: 0;
 	box-shadow: 3px 3px 5px 3px rgba(128, 128, 128, 0.193);
+}
+.cart-icon:hover {
 }
 .cart-count {
 	position: absolute;
