--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -49,8 +49,12 @@ a:hover {
 	background-color: rgb(71, 158, 246);
 	border: 0;
 	box-shadow: 3px 3px 5px 3px rgba(128, 128, 128, 0.193);
+	transition: 250ms all linear;
 }
 .cart-icon:hover {
+	background-color: rgba(71, 159, 246, 0.699);
+	box-shadow: 1px 3px 3px 3px rgba(0, 0, 0, 0.267);
+	color: rgba(105, 105, 105, 0.611);
 }
 .cart-count {
 	position: absolute;
